--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,10 @@ dependencies {
     compile 'com.android.support:design:25.2.0'
     compile 'com.android.support:support-vector-drawable:25.2.0'
     testCompile 'junit:junit:4.12'
+
+    //AutoValue
+    compile 'com.google.auto.value:auto-value:1.3'
+
+    //RxJava
+    compile group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.0.7'
 }
