--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'me.tatarka.retrolambda'
 
 android {
     compileSdkVersion 25
@@ -18,6 +20,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -29,10 +35,19 @@ dependencies {
     compile 'com.android.support:design:25.2.0'
     compile 'com.android.support:support-vector-drawable:25.2.0'
     testCompile 'junit:junit:4.12'
+    testCompile "org.robolectric:robolectric:3.3"
 
     //AutoValue
     compile 'com.google.auto.value:auto-value:1.3'
 
     //RxJava
     compile group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.0.7'
+
+    //Dagger 2
+    apt     'com.google.dagger:dagger-compiler:2.6'
+    compile 'com.google.dagger:dagger:2.6'
+
+    //Butterknife
+    compile 'com.jakewharton:butterknife:8.4.0'
+    provided 'com.jakewharton:butterknife-compiler:8.4.0'
 }
