--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
 
     //RxJava
     compile group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.0.7'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
 
     //Dagger 2
     apt     'com.google.dagger:dagger-compiler:2.6'
