--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,7 @@ dependencies {
     //Butterknife
     compile 'com.jakewharton:butterknife:8.4.0'
     provided 'com.jakewharton:butterknife-compiler:8.4.0'
+
+    //Timber
+    compile 'com.jakewharton.timber:timber:4.5.1'
 }
